saving state added, project done :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(DVD_rental)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread")
 
-add_executable(DVD_rental main.cpp RentalService.cpp RentalService.h MovieBase.cpp MovieBase.h DVD.cpp DVD.h movieGenre.h Status.h Client.cpp Client.h ClientBase.cpp ClientBase.h interface.cpp interface.h)
+
+add_executable(DVD_rental main.cpp RentalService.cpp RentalService.h MovieBase.cpp MovieBase.h DVD.cpp DVD.h movieGenre.h Status.h Client.cpp Client.h ClientBase.cpp ClientBase.h InterfaceController.cpp InterfaceController.h ClientParser.cpp ClientParser.h DVDParser.cpp DVDParser.h globalFunctions.cpp globalFunctions.h fileOperations.cpp fileOperations.h)
